core/b2b/core-services/planka/planka-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka-db
  namespace: planka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka-db
  template:
    metadata:
      labels:
        app: planka-db
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: planka-db
  namespace: planka
spec:
  selector:
    app: planka-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
