core/b2b/core-services/planka/planka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka
  namespace: planka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka
  template:
    metadata:
      labels:
        app: planka
    spec:
      containers:
        - name: planka
          image: ghcr.io/plankanban/planka:latest
          ports:
            - containerPort: 1337
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: planka-nginx-conf
        - name: tls-certs
          secret:
            secretName: planka-tls
---
apiVersion: v1
kind: Service
metadata:
  name: planka
  namespace: planka
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.244
  ports:
    - name: https
      port: 8083
      targetPort: 8443
      protocol: TCP
  selector:
    app: planka
