core/b2b/core-services/planka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka
  namespace: planka
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Debug-Snippet "true" always;
      proxy_set_header Accept-Encoding "";
      sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
      sub_filter_once off;
      sub_filter_types *;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - planka.ka0s.io
      secretName: planka-tls-cert
  rules:
    - host: planka.ka0s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka
                port:
                  number: 80
# Force update: retry with publish-service arg
